--- a/src/css/App.css
+++ b/src/css/App.css
@@ -38,3 +38,14 @@
 }
 
 
+/*img {*/
+/*  opacity: 1;*/
+/*  filter: alpha(opacity=40);*/
+/*}*/
+
+/*img:hover {*/
+/*  opacity: 0.5;*/
+/*  filter: alpha(opacity=100);*/
+/*}*/
+
+
