--- a/src/css/AlbumList.css
+++ b/src/css/AlbumList.css
@@ -30,14 +30,13 @@
   padding: 5px;
 }
 
-.circle {
-    width: 100%;
-    height: 100%;
-    border-radius: 50%;
-    overflow: hidden;
-    border: #305A4D;
-
-}
+/*.circle {*/
+/*    width: 100%;*/
+/*    height: 100%;*/
+/*    border-radius: 50%;*/
+/*    overflow: hidden;*/
+/*    border: #305A4D;*/
+/*}*/
 
 
 
